2003-04-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/internals.itely: more updates.

2003-04-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely: revise 

	* Documentation/user/internals.itely: revise

	* lily/music.cc (LY_DEFINE): add function ly:music-deep-copy

2003-04-22  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: bugfix: fixed broken @ref{};
	beautification: reformatted ancient clefs section; cleanup: small
	wording fixes

2003-04-22  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: added words for chant notation, sorted
	alphabetically through "sort lilypond.words"

2003-04-22  Juergen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly, ly/script-init.ly, mf/parmesan-scripts.mf,
	scm/script.scm, input/test/gregorian-scripts.ly: added scripts for
	chant notation

2003-04-21  Juergen Reuter  <reuter@ipd.uka.de>

	* buildscripts/mf-to-table.py: bugfix: "--" in glyph names:
	prevent TeX from interpreting them as long dash

	* input/test/vaticana.ly: updated

	* mf/parmesan-accidentals.mf, mf/parmesan-clefs.mf,
	mf/parmesan-custodes.mf, mf/parmesan-flags.mf,
	mf/parmesan-heads.mf, mf/parmesan-rests.mf,
	mf/parmesan-scripts.mf, mf/parmesan-timesig.mf: more set_char_box
	fixes

	* mf/parmesan-heads.mf: ledger endings: removed dead code

2003-04-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/GNUmakefile
	($(outdir)/lilypond-internals/lilypond-internals.html): copy ly
	files too.

	* scm/document-markup.scm: new file: document all markup
	functions.

	* scm/documentation-generate.scm: rename all documentation modules
	to document-*.scm

	* scripts/lilypond-book.py: generate link to .ly file iso. link to
	.png

	* input/test/divisiones.ly: added

	* input/regression/output-property.ly: new file

	* lily/cluster.cc: change cluster-interface to use style property

2003-04-20  Rune Zedeler  <rune@zedeler.dk>

	* input/test/chord-names-german.ly: modified.
