@@ -20,18 +20,18 @@ Usage:
 @end example
 
 
-When invoked with a filename that has no extension, LilyPond will try
-to add @file{.ly} as an extension first.  To have LilyPond read from
-stdin, use a dash @code{-} for @var{file}.
+When invoked with a filename that has no extension, the @file{.ly}
+extension is tried first.  To read input from  stdin, use a
+dash @code{-} for @var{file}.
 
-When LilyPond processes @file{filename.ly} it will produce
+When @file{filename.ly} is processed it will produce
 @file{filename.tex} as output (or @file{filename.ps} for PostScript
 output).  If @file{filename.ly} contains more than one @code{\score}
-block, then LilyPond will output the rest in numbered files, starting
-with @file{filename-1.tex}.  Several files can be specified; they will
-each be processed independently.  @footnote{The status of GUILE is not
-reset across invocations, so be careful not to change any default
-settings from within Scheme .}
+block, then the rest of the scores will be output in numbered files,
+starting with @file{filename-1.tex}.  Several files can be specified;
+they will each be processed independently.  @footnote{The status of
+  GUILE is not reset across invocations, so be careful not to change any
+  default settings from within Scheme .}
 
 
 @section Command line options
@@ -151,12 +151,12 @@ file tree. A typical setting would be
 @item GS_LIB
 For processing PostScript output (obtained with
 @code{-f ps}) with Ghostscript you have to set @code{GS_LIB} to
-point to the directory containing LilyPond PS files.
+point to the directory containing library PS files.
 
 @item GS_FONTPATH
 For processing PostScript output (obtained with
 @code{-f ps}) with Ghostscript you have to set @code{GS_FONTPATH} to
-point to the directory containing LilyPond PFA files.
+point to the directory containing  PFA files.
 
 When you print direct PS output, remember to send the PFA files to the
 printer as well.
@@ -170,7 +170,7 @@ printer as well.
 @cindex TEXMF
 @cindex printing postscript
 
-The LilyPond binary itself recognizes the following environment variables
+The  binary itself recognizes the following environment variables
 @table @code
 @item LILYPONDPREFIX
 This specifies a directory where locale messages and
@@ -178,7 +178,7 @@ data files will be looked up by default. The directory should contain
 subdirectories called @file{ly/}, @file{ps/}, @file{tex/}, etc.
 
 @item LANG
-This selects the language for the warning messages of LilyPond.
+This selects the language for the warning messages 
 @end table
 
 @cindex LANG
@@ -195,7 +195,7 @@ This selects the language for the warning messages of LilyPond.
 Since there is no finder's fee which doubles every year, there is no
 need to wait for the prize money to grow. Send a bug report today!
 
-LilyPond development moves quickly, so if you have a problem, it is
+Development moves quickly, so if you have a problem, it is
 wise to check if it has been fixed in a newer release.  If not, please
 send in a bugreport.  When you send us a bugreport, we have to
 diagnose the problem and if necessary, duplicate it.  To make this
@@ -274,11 +274,11 @@ column location.
 
 @c move this elsewhere?
 
-LilyPond also comes with support files for emacs: lilypond-mode for
-emacs provides indentation, autocompletion, syntax coloring, handy
-compile short-cuts and reading Info documents of lilypond inside emacs.
-If lilypond-mode is not installed on your platform,
-then refer to the installation instructions for more information.
+There is also support for emacs: lilypond-mode for emacs provides
+indentation, autocompletion, syntax coloring, handy compile short-cuts
+and reading Info documents of lilypond inside emacs.  If lilypond-mode
+is not installed on your platform, then refer to the installation
+instructions for more information.
 
 @cindex emacs
 @cindex emacs mode
@@ -498,7 +498,7 @@ was here, @var{version-number}''.
 @subsection Additional parameters
 
 Ly2dvi responds to several parameters specified in a @code{\paper}
-section of the LilyPond file. They can be overridden by supplying a
+section of the input file. They can be overridden by supplying a
 @code{--set} command line option.
 
 @table @code
@@ -555,14 +555,6 @@ positive integer, start with this value as the first page number.
 @subsection Environment variables
 
 @table @code
-@item LANG
-selects the language for the warning messages of Ly2dvi and LilyPond.
-
-@item GUILE_MAX_SEGMENT_SIZE
-is an option for GUILE, the scheme interpreter; it sets the size of
-the chunks of memory allocated by GUILE.  By increasing this from its
-default 8388608, the performance of LilyPond on large scores is
-slightly improved.
 
 
 @end table
